--- a/application resource/application.yml
+++ b/application resource/application.yml
@@ -4,9 +4,9 @@ metadata:
   name: restaurant-listing-default
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: myalias=docker.io/codedecode25        
+    argocd-image-updater.argoproj.io/image-list: myalias=docker.io/harigoutham        
     argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds           
-    argocd-image-updater.argoproj.io/git-branch: master                                          
+    argocd-image-updater.argoproj.io/git-branch: main                                          
     argocd-image-updater.argoproj.io/myalias.force-update: "true"
 spec:
   destination:
