--- a/aws/secret.yml
+++ b/aws/secret.yml
@@ -4,5 +4,5 @@ metadata:
   name: secret
 type: Opaque
 data:
-  mysql-username: YWRtaW4=
-  mysql-password: YWRtaW4xMjM=
+  mysql-username: cm9vdA==
+  mysql-password: cm9vdA==
