--- a/aws/food-catalogue-manifest.yml
+++ b/aws/food-catalogue-manifest.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: foodcatalogueapp
-          image: harigoutham/food-catalogue-service
+          image: harigoutham/food-catalogue-service:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 9092 #
