--- a/aws/ingress.yml
+++ b/aws/ingress.yml
@@ -1,12 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: aws-ingress
-  #namespace: argocd
+  name: nginx-ingress
+  namespace: argocd
   annotations:
-    kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
     - http:
