--- a/aws/ingress.yml
+++ b/aws/ingress.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nginx-ingress
-  namespace: argocd
+  namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
 spec:
