--- a/aws/eureka-ingress.yml
+++ b/aws/eureka-ingress.yml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: eureka-nginx-ingress
-  namespace: argocd
+  namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
