--- a/aws/restaurant-manifest.yml
+++ b/aws/restaurant-manifest.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: restaurantapp
     spec:
+      hostNetwork: true
       containers:
         - name: restaurantapp
           image: harigoutham/restaurant-listing-service:10
