--- a/aws/food-catalogue-manifest.yml
+++ b/aws/food-catalogue-manifest.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: foodcatalogueapp
     spec:
+      hostNetwork: true
       containers:
         - name: foodcatalogueapp
           image: harigoutham/food-catalogue-service:latest
