--- a/aws/eureka-ingress.yml
+++ b/aws/eureka-ingress.yml
@@ -10,7 +10,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /eureka
+          - path: /eureka/
             pathType: Prefix
             backend:
               service:
