--- a/aws/configmap.yml
+++ b/aws/configmap.yml
@@ -7,7 +7,7 @@ data:
   foodcataloguedb_url: jdbc:mysql://192.168.137.201:3306/foodcataloguedb
   userdb_url: jdbc:mysql://192.168.137.201:3306/userdb
   orderdb_url: mongodb://192.168.137.201:27017/orderdb
-  eureka_service_address: http://eureka-0.eureka-service:8761/eureka/
+  eureka_service_address: http://localhost:8761/eureka/
 
 
   
