--- a/aws/restaurant-manifest.yml
+++ b/aws/restaurant-manifest.yml
@@ -36,6 +36,11 @@ spec:
                 configMapKeyRef:
                   name: configmap
                   key: restaurantdb_url
+            - name: EUREKA_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: configmap
+                  key: eureka_service_address                  
 ---
 apiVersion: v1
 kind: Service
