--- a/aws/order-manifest.yml
+++ b/aws/order-manifest.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: orderapp
-          image: harigoutham/order-service
+          image: harigoutham/order-service:3
           imagePullPolicy: Always
           ports:
             - containerPort: 9094
